--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
+    "@types/oauth": "^0.9.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "oauth": "^0.10.0",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "sass": "^1.58.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
