--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/oauth": "^0.9.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "oauth": "^0.10.0",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
