--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@types/oauth": "^0.9.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "oauth": "^0.10.0",
+    "@types/recompose": "^0.30.10",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5",
     "react-scripts": "5.0.1",
+    "recompose": "^0.30.0",
     "redux": "^4.2.1",
     "sass": "^1.58.3",
     "typescript": "^4.4.2",
